--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@ PC2-recepteur
 host
 .vscode
 build
+Exemple-PCrecepteur&emetteur/pc1
+Exemple-PCrecepteur&emetteur/pc2
+Exemple-PCrecepteur&emetteur/pc3
