--- a/Anneau/Makefile
+++ b/Anneau/Makefile
@@ -2,16 +2,16 @@ all: main
 CC = gcc
 
 main: src/main.c src/pc.c
-	$(CC) -Wall -o $@.exe $^
+	$(CC) -Wall -o $@.run $^
 
 pc1: src/pc1.c
-	$(CC) -Wall -o $@.exe $^
+	$(CC) -Wall -o $@.run $^
 
 pc2: src/pc2.c
-	$(CC) -Wall -o $@.exe $^
+	$(CC) -Wall -o $@.run $^
 	
 pc3: src/pc3.c
-	$(CC) -Wall -o $@.exe $^
+	$(CC) -Wall -o $@.run $^
 	
 
 
