--- a/Anneau/Makefile
+++ b/Anneau/Makefile
@@ -8,25 +8,6 @@ pc_test1: src/utils.c src/pc_test1.c
 pc_test2: src/utils.c src/pc_test2.c
 	$(CC) -Wall -o $@.run $^
 
-pc1: src/pc1.c
-	$(CC) -Wall -o $@.run $^
-
-pc2: src/pc2.c
-	$(CC) -Wall -o $@.run $^
-	
-pc3: src/pc3.c
-	$(CC) -Wall -o $@.run $^
-	
-
-
-	
-
-
-
-
-
-	
-
-
-
+clean:
+	rm -f *.run
 
