--- a/Anneau/Makefile
+++ b/Anneau/Makefile
@@ -1,11 +1,14 @@
-all: pc_test1 pc_test2
+all: pc1 pc2 pc3
 CC = gcc
 
-pc_test1: src/utils.c src/pc_test1.c
+pc1: src/utils.c src/pc1.c
 	$(CC) -Wall -o $@.run $^
 
 
-pc_test2: src/utils.c src/pc_test2.c
+pc2: src/utils.c src/pc2.c
+	$(CC) -Wall -o $@.run $^
+
+pc3: src/utils.c src/pc3.c
 	$(CC) -Wall -o $@.run $^
 
 clean:
